# trading-signals-crawling

./: .gitignore  CHANGELOG.md  Crawler_Trading_Sgnal.mq4  README.md  config.example.ini  main.py  msg_parser.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
crawler/: config.py  executor.py  main.py  msg_parser.py  mt5_client.py  order_lookup.py  order_registry.py  risk.py  signals_csv.py  utils.py
data_crawler_trading_signal/: __init__.py  main.py  msg_parser.py
mt4/: Crawler_Trading_Signal.mq4
scripts/: install-task.ps1  uninstall-task.ps1
src/crawler/: __main__.py  comments.py  config.py  crawler_state.py  executor.py  log_setup.py  main.py  msg_parser.py  mt5_client.py  news_calendar.py  order_lookup.py  position_guard.py  risk.py
tests/: __init__.py  test_comments.py  test_config.py  test_crawler_state.py  test_executor.py  test_main.py  test_msg_parser.py  test_mt5_client.py  test_news_calendar.py  test_order_lookup.py  test_order_registry.py  test_position_guard.py  test_risk.py
